edit configuration line

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=forohub
-# Use your own variables to test, default apiname "foro_hub"
+# Use your own variables to test, default database "foro_hub"
 spring.datasource.url=jdbc:mysql://${DB_HOST}/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
